--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,7 +76,8 @@ ManualIPAddress=
 DefaultPlatformService=Steam
 
 [OnlineSubsystemSteam]
-bEnabled=true
+bEnableSteam=true
+;bEnabled=true
 SteamDevAppId=480
 
 ; If using Sessions
