--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ GameDefaultMap=/Game/ThirdPerson/Maps/Menu/MainMenu.MainMenu
 EditorStartupMap=/Game/ThirdPerson/Maps/Menu/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/SteamTest.SteamTestGameMode"
 GameInstanceClass=/Script/SteamTest.SteamTestGameInstance
+ServerDefaultMap=/Game/ThirdPerson/Maps/Menu/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
