--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,6 +14,11 @@ r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+RedChromaticityCoordinate=(X=0.713000,Y=0.293000)
+GreenChromaticityCoordinate=(X=0.165000,Y=0.830000)
+BlueChromaticityCoordinate=(X=0.128000,Y=0.044000)
+WhiteChromaticityCoordinate=(X=0.321680,Y=0.337670)
+WorkingColorSpaceChoice=ACESAP1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
