--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -9,3 +9,6 @@ bBlueprintIsNotBlueprintType= true
 
 [/Script/AdvancedPreviewScene.SharedProfiles]
 
+[/Script/UMGEditor.UMGEditorProjectSettings]
+bShowWidgetsFromEngineContent=True
+
