--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,7 @@ GreenChromaticityCoordinate=(X=0.165000,Y=0.830000)
 BlueChromaticityCoordinate=(X=0.128000,Y=0.044000)
 WhiteChromaticityCoordinate=(X=0.321680,Y=0.337670)
 WorkingColorSpaceChoice=ACESAP1
+r.ReflectionCaptureResolution=64
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
