--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,8 +83,7 @@ ManualIPAddress=
 DefaultPlatformService=Steam
 
 [OnlineSubsystemSteam]
-bEnableSteam=true
-;bEnabled=true
+bEnable=true
 SteamDevAppId=480
 
 ; If using Sessions
