--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,7 +83,7 @@ ManualIPAddress=
 DefaultPlatformService=Steam
 
 [OnlineSubsystemSteam]
-bEnable=true
+bEnabled=true
 SteamDevAppId=480
 
 ; If using Sessions
